<resources>
    // texto tela Main
    <string name="app_name">Atividade Fixação</string>

    // Texto exercício 6
    <string name="title">EXERCÍCIO 6</string>
    <string name="Quantidade">Digite a quantidade total de produtos</string>
    // Codigos
    <string name="C">Cachorro-Quente</string>
    <string name="R">Refrigerante</string>
    <string name="S">Suco</string>
    <string name="Result">O resultado é</string>

    // Botões
    <string name="btncalcular">Calcular</string>
    <string name="btnexercico3">Exercício 3</string>
    <string name="btnexercico6">Exercício 6</string>
    <string name="btnvoltar">Voltar</string>
    <string name="btnprox">Próximo</string>

    // Exercício 3

        <string name="txtMextra">Número de horas extra em minutos:</string>
        <string name="txtMfalta">Número de horas falta em minutos:</string>
        <string name="btncalcular2">VERIFICAR</string>
        <string name="txtpremio">A gratificação:</string>
        <string name="txtHextra">A hora extra é:</string>
        <string name="txtHfalta">A hora falta é:</string>
        <string name="txttitulo2">VERIFICAÇÃO DE GRATIFICAÇÃO</string>
        <string name="txttitulo1">EXERCÍCIO 3</string>
    </resources>
