<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txttilteentrada"
        android:layout_width="248dp"
        android:layout_height="45dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="130dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnentrar1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnentrar1"
        android:layout_width="185dp"
        android:layout_height="68dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="-99dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="110dp"
        android:text="@string/btnexercico3"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEntrar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttilteentrada" />

    <Button
        android:id="@+id/btnEntrar2"
        android:layout_width="185dp"
        android:layout_height="70dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="-99dp"
        android:layout_marginEnd="111dp"
        android:text="@string/btnexercico6"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnentrar1" />

</androidx.constraintlayout.widget.ConstraintLayout>